--- a/Penn State Search/en.lproj/MainStoryboard.storyboard
+++ b/Penn State Search/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -12,17 +12,22 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="VKy-pp-N1W">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VKy-pp-N1W">
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Penn State Directory Search" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gbg-d1-IoH">
-                                        <rect key="frame" x="20" y="66" width="282" height="33"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Penn State Directory Search" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gbg-d1-IoH">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="33" id="bzS-XM-Cp9"/>
+                                            <constraint firstAttribute="width" constant="282" id="w5v-A7-id1"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="v7N-RW-nlC">
-                                        <rect key="frame" x="122" y="414" width="75" height="44"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v7N-RW-nlC">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="75" id="Ano-oJ-IDz"/>
+                                            <constraint firstAttribute="height" constant="44" id="GBP-oe-cty"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <state key="normal" title="Search">
                                             <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -35,24 +40,24 @@
                                             <action selector="searchPressed:" destination="2" eventType="touchUpInside" id="nv8-ux-0FX"/>
                                         </connections>
                                     </button>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" clearButtonMode="whileEditing" id="2N1-iQ-GFI">
-                                        <rect key="frame" x="20" y="119" width="282" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2N1-iQ-GFI">
                                         <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="15"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="done"/>
                                         <connections>
                                             <outlet property="delegate" destination="2" id="eeo-eN-C0W"/>
                                         </connections>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="whileEditing" id="VEx-Kt-lJZ">
-                                        <rect key="frame" x="20" y="185" width="282" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="VEx-Kt-lJZ">
                                         <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="15"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="done"/>
                                         <connections>
                                             <outlet property="delegate" destination="2" id="7Op-5J-qYY"/>
                                         </connections>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Access ID" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" id="anb-GX-WGQ">
-                                        <rect key="frame" x="96" y="356" width="130" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Access ID" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="anb-GX-WGQ">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="130" id="uVx-cu-5df"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="15"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="done"/>
                                         <connections>
@@ -61,9 +66,31 @@
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.50196081399917603" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Gbg-d1-IoH" firstAttribute="trailing" secondItem="2N1-iQ-GFI" secondAttribute="trailing" type="default" id="Hhs-lC-yQF"/>
+                                    <constraint firstItem="VEx-Kt-lJZ" firstAttribute="leading" secondItem="VKy-pp-N1W" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Lhw-1z-pum"/>
+                                    <constraint firstItem="anb-GX-WGQ" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="356" id="UF1-Ge-Bl9"/>
+                                    <constraint firstItem="Gbg-d1-IoH" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="111" id="UdR-O7-ReT"/>
+                                    <constraint firstItem="VEx-Kt-lJZ" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="230" id="V0c-ee-SoA"/>
+                                    <constraint firstItem="v7N-RW-nlC" firstAttribute="leading" secondItem="VKy-pp-N1W" secondAttribute="leading" constant="122" id="W9W-Nc-nI2"/>
+                                    <constraint firstItem="v7N-RW-nlC" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="414" id="WxG-r8-jQB"/>
+                                    <constraint firstItem="2N1-iQ-GFI" firstAttribute="leading" secondItem="VKy-pp-N1W" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Zd1-VR-AL4"/>
+                                    <constraint firstItem="VEx-Kt-lJZ" firstAttribute="centerX" secondItem="anb-GX-WGQ" secondAttribute="centerX" type="default" id="eMM-SH-Ys9"/>
+                                    <constraint firstItem="Gbg-d1-IoH" firstAttribute="leading" secondItem="VKy-pp-N1W" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="jh1-gi-dGE"/>
+                                    <constraint firstItem="VEx-Kt-lJZ" firstAttribute="trailing" secondItem="2N1-iQ-GFI" secondAttribute="trailing" type="default" id="m8V-Mo-PnF"/>
+                                    <constraint firstItem="2N1-iQ-GFI" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="164" id="nhE-6Y-Yhh"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gbg-d1-IoH" secondAttribute="trailing" constant="18" id="onA-xc-LIC"/>
+                                    <constraint firstAttribute="bottom" secondItem="v7N-RW-nlC" secondAttribute="bottom" constant="90" id="p7l-PM-gPG"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VKy-pp-N1W" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="4fD-p0-lTG"/>
+                            <constraint firstItem="VKy-pp-N1W" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="G8E-Q5-d89"/>
+                            <constraint firstItem="VKy-pp-N1W" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="jmA-0I-ob8"/>
+                            <constraint firstItem="VKy-pp-N1W" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="zeZ-9o-BsL"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="accessIdField" destination="anb-GX-WGQ" id="dhY-a1-g3Z"/>
@@ -85,9 +112,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="99" sectionHeaderHeight="22" sectionFooterHeight="22" id="P5v-gL-hR5">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="99" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="P5v-gL-hR5">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="v4F-f5-JIV" detailTextLabel="8ca-cz-NZU" rowHeight="99" style="IBUITableViewCellStyleSubtitle" id="41V-bo-ziS">
@@ -104,7 +129,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8ca-cz-NZU">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="47" id="8ca-cz-NZU">
                                                     <rect key="frame" x="10" y="51" width="47" height="18"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -117,9 +142,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Gug-Am-0lv">
-                                <rect key="frame" x="0.0" y="504" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gug-Am-0lv">
                                 <items>
                                     <barButtonItem systemItem="done" id="wUt-1t-Nkv">
                                         <connections>
@@ -130,6 +153,15 @@
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="P5v-gL-hR5" firstAttribute="trailing" secondItem="BDe-iv-R8J" secondAttribute="trailing" type="default" id="3tl-aO-aE3"/>
+                            <constraint firstItem="Gug-Am-0lv" firstAttribute="bottom" secondItem="BDe-iv-R8J" secondAttribute="bottom" type="default" id="EAm-06-yCl"/>
+                            <constraint firstItem="P5v-gL-hR5" firstAttribute="top" secondItem="BDe-iv-R8J" secondAttribute="top" type="default" id="FxM-1y-DWt"/>
+                            <constraint firstItem="Gug-Am-0lv" firstAttribute="leading" secondItem="BDe-iv-R8J" secondAttribute="leading" type="default" id="Fxd-Dv-rYK"/>
+                            <constraint firstItem="P5v-gL-hR5" firstAttribute="leading" secondItem="BDe-iv-R8J" secondAttribute="leading" type="default" id="QS1-ln-Y6G"/>
+                            <constraint firstItem="Gug-Am-0lv" firstAttribute="trailing" secondItem="BDe-iv-R8J" secondAttribute="trailing" type="default" id="jSy-H0-FH1"/>
+                            <constraint firstItem="Gug-Am-0lv" firstAttribute="top" secondItem="P5v-gL-hR5" secondAttribute="bottom" type="default" id="nH8-c8-gB0"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="P5v-gL-hR5" id="tUD-9z-IYY"/>
@@ -141,6 +173,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
         <class className="SearchViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SearchViewController.h"/>
             <relationships>
