--- a/Penn State Search/en.lproj/MainStoryboard.storyboard
+++ b/Penn State Search/en.lproj/MainStoryboard.storyboard
@@ -115,11 +115,11 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="99" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="P5v-gL-hR5">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="v4F-f5-JIV" detailTextLabel="8ca-cz-NZU" rowHeight="99" style="IBUITableViewCellStyleSubtitle" id="41V-bo-ziS">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailDisclosureButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="v4F-f5-JIV" detailTextLabel="8ca-cz-NZU" rowHeight="99" style="IBUITableViewCellStyleSubtitle" id="41V-bo-ziS">
                                         <rect key="frame" x="0.0" y="22" width="320" height="99"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="98"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="98"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="v4F-f5-JIV">
@@ -142,22 +142,10 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gug-Am-0lv">
-                                <items>
-                                    <barButtonItem systemItem="done" id="wUt-1t-Nkv">
-                                        <connections>
-                                            <action selector="backPressed:" destination="TXm-1P-KIT" id="cre-7i-Ov7"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Gug-Am-0lv" firstAttribute="trailing" secondItem="BDe-iv-R8J" secondAttribute="trailing" type="default" id="0Dw-g4-Qit"/>
-                            <constraint firstItem="Gug-Am-0lv" firstAttribute="leading" secondItem="BDe-iv-R8J" secondAttribute="leading" type="default" id="8ej-eG-0XB"/>
-                            <constraint firstItem="Gug-Am-0lv" firstAttribute="bottom" secondItem="BDe-iv-R8J" secondAttribute="bottom" type="default" id="GPH-dC-V3n"/>
-                            <constraint firstItem="Gug-Am-0lv" firstAttribute="top" secondItem="P5v-gL-hR5" secondAttribute="bottom" type="default" id="cP8-8b-bGR"/>
+                            <constraint firstItem="P5v-gL-hR5" firstAttribute="bottom" secondItem="BDe-iv-R8J" secondAttribute="bottom" type="default" id="Ih2-c0-tJ7"/>
                             <constraint firstItem="P5v-gL-hR5" firstAttribute="top" secondItem="BDe-iv-R8J" secondAttribute="top" type="default" id="i6K-hb-KHX"/>
                             <constraint firstItem="P5v-gL-hR5" firstAttribute="trailing" secondItem="BDe-iv-R8J" secondAttribute="trailing" type="default" id="lzP-nF-D9d"/>
                             <constraint firstItem="P5v-gL-hR5" firstAttribute="leading" secondItem="BDe-iv-R8J" secondAttribute="leading" type="default" id="tnd-Td-Pc9"/>
@@ -170,7 +158,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f9R-iM-n6I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="313" y="-601"/>
+            <point key="canvasLocation" x="317" y="-601"/>
+        </scene>
+        <!--Result Detail View Controller-->
+        <scene sceneID="dAz-kP-It7">
+            <objects>
+                <viewController storyboardIdentifier="ResultDetailView" id="S0U-Gt-o11" customClass="ResultDetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1Fr-fS-P6N">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="OKZ-6B-UsH">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DetailCell" id="5xh-Xy-9Lh">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OKZ-6B-UsH" firstAttribute="bottom" secondItem="1Fr-fS-P6N" secondAttribute="bottom" type="default" id="QUb-Xd-hG0"/>
+                            <constraint firstItem="OKZ-6B-UsH" firstAttribute="trailing" secondItem="1Fr-fS-P6N" secondAttribute="trailing" type="default" id="eeX-HA-Raz"/>
+                            <constraint firstItem="OKZ-6B-UsH" firstAttribute="leading" secondItem="1Fr-fS-P6N" secondAttribute="leading" type="default" id="pAh-Mf-LSJ"/>
+                            <constraint firstItem="OKZ-6B-UsH" firstAttribute="top" secondItem="1Fr-fS-P6N" secondAttribute="top" type="default" id="wQN-ze-h8e"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TT0-fL-0Nl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="819" y="-601"/>
         </scene>
         <!--Navigation Controller - Item-->
         <scene sceneID="mqh-Ps-kdM">
@@ -256,6 +280,12 @@
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ResultDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ResultDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="resultsToolbar" candidateClass="UIToolbar"/>
+            </relationships>
         </class>
         <class className="ResultsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ResultsViewController.h"/>
